--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
 # Dependencies
-.psci_modules
-.spago
-bower_components
-node_modules
 
-# Generated files
-.psci
-output
+# Generated file
+
+apikeys/**
+
