--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "docker-stacks"]
 	path = docker-stacks
-	url = https://github.com/cosgroma/docker-stacks.git
+	url = https://github.northgrum.com/cosgrma/docker-stacks.git
